# fatebook-mcp

./: .env.example  CLAUDE.md  LICENSE.md  README.md  TODOS.md  main.py  models.py  pyproject.toml  test_client.py
.github/workflows/: ci.yml  publish.yml
src/fatebook_mcp/: __init__.py  __main__.py  models.py
