[project]
name = "fatebook-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = "test_*.py"
python_functions = "test_*"
markers = ["integration: marks tests as integration tests"]
