[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fatebook-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Fatebook prediction tracking"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Stephen Malina", email = "stephen.malina@gmail.com" }]
keywords = [
    "mcp",
    "fatebook",
    "predictions",
    "forecasting",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.12.4",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]

[project.scripts]
fatebook-mcp = "fatebook_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/an1lam/fatebook-mcp"
Repository = "https://github.com/an1lam/fatebook-mcp"
Issues = "https://github.com/an1lam/fatebook-mcp/issues"
Documentation = "https://github.com/an1lam/fatebook-mcp#readme"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = "test_*.py"
python_functions = "test_*"
markers = ["integration: marks tests as integration tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    ".venv",
]

line-length = 100
indent-width = 4

[dependency-groups]
dev = ["hatchling>=1.27.0"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
